--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-delay-render": "^0.1.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
